# SmartControl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
Resources/: simple_equation.json  simple_equation.xml
SCConsole/: CMakeLists.txt
SCConsole/source/: main.cpp
SCLib/: CMakeLists.txt
SCLib/include/expressions/: control.h  expression.h
SCLib/include/expressions/ode_expressions/: phase_expression.h
SCLib/include/solvers/ode_solvers/: i_ode_solver.h  phase_solver.h  runge_kutta_solver.h
SCLib/source/expressions/: expression.cpp
SCLib/source/expressions/ode_expressions/: phase_expression.cpp
SCLib/source/solvers/ode_solvers/: phase_solver.cpp  runge_kutta_solver.cpp
